--- a/PatronatGroup/ClientApp/src/custom.css
+++ b/PatronatGroup/ClientApp/src/custom.css
@@ -12,3 +12,15 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+/* common for blok */
+.commonForBloks{
+  width: 100%;
+  height: 44.063rem;
+  max-width: 88.25rem;
+  margin: 1rem auto;
+  background:radial-gradient(175.59% 73.2% at 0% 0%, rgba(100, 151, 177, 0.09) 0%, rgba(100, 151, 177, 0) 100%), #03396C;
+  border: 1px solid #B3CDE0;
+  box-sizing: border-box;
+  backdrop-filter: blur(4px);
+  border-radius: 10px;
+}
