--- a/PatronatGroup/ClientApp/src/presentation/components/HomePage/Home.module.css
+++ b/PatronatGroup/ClientApp/src/presentation/components/HomePage/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-    background: #2b2e4a;
+    background: #011F4B;
     width: 90rem;
     display: flex;
     border: 1px solid #B3CDE0;
