--- a/PatronatGroup/ClientApp/src/presentation/components/Skeletons/Blok.module.css
+++ b/PatronatGroup/ClientApp/src/presentation/components/Skeletons/Blok.module.css
@@ -1,6 +1,10 @@
-.title {
+.titleContainer {
   width: 100%;
   max-width: 620px;
+  display: flex;
+}
+.title{
+  margin: 0 auto;
   font-family: "Tenor Sans";
   font-style: normal;
   font-weight: normal;
