--- a/PatronatGroup/ClientApp/src/custom.css
+++ b/PatronatGroup/ClientApp/src/custom.css
@@ -13,13 +13,13 @@ code {
   border-color: #1861ac;
 }
 /* app */
-#root{
+body{
   background: #2B2E4A;
 }
 /* common for blok */
 .commonForBloks{
   width: 100%;
-  height: 44.063rem;
+  padding-bottom: 15px;
   max-width: 88.25rem;
   margin: 1rem auto;
   background:radial-gradient(175.59% 73.2% at 0% 0%, rgba(100, 151, 177, 0.09) 0%, rgba(100, 151, 177, 0) 100%), #03396C;
