--- a/PatronatGroup/ClientApp/src/infrastructure/Common/components/CommonComponentsStyle.module.css
+++ b/PatronatGroup/ClientApp/src/infrastructure/Common/components/CommonComponentsStyle.module.css
@@ -41,7 +41,7 @@
 .button {
   max-width: 100%;
   max-height: 100%;
-  border: 1px solid #B3CDE0;
+  border: 1px solid #b3cde0;
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-radius: 7px;
@@ -55,10 +55,52 @@
   margin: 0 5px;
   padding: 4px 10px;
 }
-.button:hover{
+.button:hover {
   opacity: 80%;
 }
 .button:focus {
   outline: none;
 }
-
+/* My inputs */
+.textInput {
+  width: 80%;
+  height: 40px;
+  background: #b3cde0;
+  border: 1px solid #6497b1;
+  box-sizing: border-box;
+  border-radius: 8px;
+  margin-top: 15px;
+  padding-left: 7px;
+}
+.textInput:focus {
+  outline: 1px solid #c8e6f5;
+}
+.textInput::placeholder {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
+  color: #6497b1;
+}
+.textArea {
+  width: 80%;
+  background: #b3cde0;
+  border: 1px solid #6497b1;
+  height: 150px;
+  box-sizing: border-box;
+  border-radius: 8px;
+  margin-top: 15px;
+  padding-left: 7px;
+}
+.textArea::placeholder{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 21px;
+  color: #6497b1;
+}
+.textArea:focus {
+  outline: 1px solid #c8e6f5;
+}
