--- a/PatronatGroup/ClientApp/src/presentation/components/Footer/Footer.module.css
+++ b/PatronatGroup/ClientApp/src/presentation/components/Footer/Footer.module.css
@@ -15,4 +15,56 @@
   color: #b3cde0;
   border: 1px solid #6497b1;
   text-shadow: 0px -2px 2px rgba(0, 0, 0, 0.25);
+  text-align: center;
+}
+.lenguagesButtonsContainer {
+  display: flex;
+}
+.footerButtonMenu {
+  border: 1px solid #b3cde0;
+  box-sizing: border-box;
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  border-radius: 15px;
+  background-color: rgba(0, 91, 150, 1);
+  color: #b3cde0;
+  font-size: 20px;
+  line-height: 25px;
+  font-family: Tenor Sans;
+  font-style: normal;
+  font-weight: normal;
+  margin: 1px 0;
+}
+.footerButtonMenu:focus{
+  outline: none;
+}
+.footerMenu {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+.practicesFooter {
+  font-family: Tenor Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 105%;
+  color: #011f4b;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+.contactsFooter{
+  font-family: Tenor Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 110%;
+  color: #011f4b;
+  margin-top: 10px;
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.footerButtonContacts{
+  margin: 7px 0;
 }
