--- a/PatronatGroup/ClientApp/src/custom.css
+++ b/PatronatGroup/ClientApp/src/custom.css
@@ -28,6 +28,9 @@ body{
   backdrop-filter: blur(4px);
   border-radius: 10px;
 }
+.forBloksBackground{
+  background: radial-gradient(175.59% 73.2% at 0% 0%, rgba(100, 151, 177, 0.33) 0%, rgba(100, 151, 177, 0) 100%), #03396C !important;
+}
 /* common for blok */
 .containerLayout{
   background: #011F4B;
