--- a/PatronatGroup/ClientApp/src/custom.css
+++ b/PatronatGroup/ClientApp/src/custom.css
@@ -16,6 +16,9 @@ code {
 body{
   background: #2B2E4A;
 }
+.ui.fluid.inverted.menu{
+  background-image: linear-gradient(135deg, rgb(24,42,115) 0%, rgb(33,138,174)69%,rgb(32,167,172)89%) !important;
+}
 /* common for blok */
 .commonForBloks{
   width: 100%;
@@ -38,6 +41,7 @@ body{
   display: flex;
   border: 1px solid #B3CDE0;
   flex-direction: column;
+  margin: 0 auto;
 }
 /* icon */
 .socialIcon{
